# Snake-Uni

./: .gitignore  CMakeLists.txt  README.md
include/: game.h  grid.h  mainMenu.h
src/: game.cpp  grid.cpp  main.cpp  mainMenu.cpp
